# cuda-mat

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.cu  makefile
cuda/: CMakeLists.txt
cuda/include/: matrix.cuh
cuda/src/: matrix.cu
cuda/test/: main.cu
python/: CMakeLists.txt
python/src/: matrix.c  module.c  pycudamat.py
python/test/: test_pycudamat.py
src/: matrix.cuh  matrix.h
